Fix spacing and middle img alignment in o_img class divs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,6 +133,11 @@ section {
     padding: 3px;
 }
 
+.o_img {
+    line-height: 125px;
+    vertical-align: middle;
+}
+
 .color-dark {
    background-color:#696969!important;
 }
